# spdf

./: .gitignore  ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  QUICKSTART.md  README.md  SECURITY.md  e2e_test.spdf  e2e_test.spdf.key  generate_admin.py  test_e2e.py
.github/workflows/: ci.yml
_deprecated/: .k_master  create_test_license.py  gen_key.py  get_license_key.py  setup_data.py  test_full_flow.py  test_output.txt  test_suite.py  test_suite.spdf  verify_client.py
spdf-cli/: main.py  requirements.txt
spdf-cli/commands/: __init__.py  decrypt.py  encrypt.py  license.py  verify.py
spdf-format/: spdf_format.py  spec.md
spdf-server/: .k_master  admin_setup.py  config.py  database.py  main.py  models.py  requirements.txt  spdf_converter.py
spdf-server/api/: device.py  files.py  license.py
spdf-server/crypto/: __init__.py  decrypt.py  encrypt.py  format.py  keys.py  signature.py
spdf-server/routes/: admin.py  auth.py  documents.py  keys.py  license_auth.py
spdf-server/static/: admin.html  admin.html.bak  login.html
spdf-server/tests/: __init__.py  conftest.py  test_encryption.py  test_format.py  test_key_wrapping.py  test_license.py  test_signatures.py
spdf-server/utils/: key_manager.py
spdf-viewer-desktop/: index.html  package-lock.json  package.json
spdf-viewer-desktop/src/: main.ts  styles.css
spdf-viewer-desktop/src-tauri/: Cargo.toml  tauri.conf.json
spdf-viewer-desktop/src-tauri/src/: auth.rs  decrypt.rs  device_id.rs  lib.rs  main.rs  spdf.rs  spdf_parser.rs  verify.rs
