[package]
name = "spdf-viewer-desktop"
version = "1.0.0"
description = "SPDF Viewer - Secure PDF Document Viewer"
authors = ["senpai80085"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "spdf_viewer_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto dependencies
aes-gcm = "0.10"
ed25519-dalek = "2.1"
sha2 = "0.10"
hex = "0.4"

# HTTP client
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Base64 encoding
base64 = "0.22"

# File system
dirs = "5.0"

# Device ID generation
uuid = { version = "1.0", features = ["v4"] }
hostname = "0.3"
sysinfo = "0.30"

# Windows-specific
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

